--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.NFC"/>
     package="com.example.einundzwanzig_meetup_app">
 
     <uses-permission android:name="android.permission.NFC" />
