--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-feature android:name="android.hardware.nfc" android:required="false" />
 
     <application
-        android:label="Einundzwanzig Meetup"
+        android:label="DEIN WUNSCHNAME"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
