Fix Java Heap Space memory error and remove invalid submodule

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,3 +4,4 @@ android.enableJetifier=true
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx1536M -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx3072m -XX:MaxMetaspaceSize=1024m
