Fix: Add missing dependency strictly

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   crypto: ^3.0.6
   share_plus: ^10.1.4
   qr_flutter: ^4.1.0
+  icalendar_parser: ^2.0.0
 
 dev_dependencies:
   flutter_test:
