--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   qr_flutter: ^4.1.0
   icalendar_parser: ^2.0.0
   url_launcher: ^6.2.5
+  mobile_scanner: ^7.1.4
 
 dev_dependencies:
   flutter_test:
