--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   dbcrypt: ^2.0.0
   nostr: ^1.5.0
 
+  # Secure Storage (Android Keystore / iOS Keychain)
+  flutter_secure_storage: ^9.2.4
+
   # Backup & Sharing
   share_plus: ^10.1.4
   file_picker: ^8.0.0
